Sapper 26.4.1
* Added: new keyboard shortcuts
* Updated: installation procedure for Linux uses jpackage again