@@ -2,7 +2,7 @@
 
 if [ -z "$1" ]
 then
-  echo "Usage: sudo install.sh <install dir>"
+  echo "Usage: install.sh <install dir>"
   exit
 fi
 
@@ -12,23 +12,10 @@ INSTALL_DIR=$1/sapper
 echo -n "Installing into $INSTALL_DIR... "
 mkdir -p $INSTALL_DIR
 rm -rf $INSTALL_DIR/*
-cp $LAUNCH_DIR/../icons/icon.png $INSTALL_DIR
-cp -r $LAUNCH_DIR/../target/jlink/* $INSTALL_DIR
+cp -r $LAUNCH_DIR/../target/dist/Sapper/* $INSTALL_DIR
+echo "done"
 
-echo "
-#!/bin/sh
-$INSTALL_DIR/bin/java \\
-  -XX:NewRatio=1 \\
-  -Xms100m \\
-  -Xmx100m \\
-  -XX:+UseCompactObjectHeaders \\
-  --enable-native-access=javafx.graphics \\
-  --sun-misc-unsafe-memory-access=allow \\
-  --module sapper/org.panteleyev.sapper.SapperApplication
-" > $INSTALL_DIR/sapper.sh
-
-chmod +x $INSTALL_DIR/sapper.sh
-
+echo -n "Creating desktop entry... "
 echo "[Desktop Entry]
 Type=Application
 Version=1.5
@@ -36,9 +23,8 @@ Name=Sapper
 Name[ru_RU]=Сапёр
 Comment=Sapper Game
 Comment[ru_RU]=Игра Сапёр
-Icon=$INSTALL_DIR/icon.png
-Exec=/bin/sh $INSTALL_DIR/sapper.sh
+Icon=$INSTALL_DIR/lib/Sapper.png
+Exec=$INSTALL_DIR/bin/Sapper
 Categories=Game;Java;
-" > $INSTALL_DIR/sapper.desktop
-
+" > $HOME/.local/share/applications/sapper.desktop
 echo "done"
